force-app/main/default/objects/Verzugszins__c/Verzugszins__c.object-meta.xml
<CustomObject>
    <label>Verzugszins</label>
    <nameField>
        <displayFormat>Z-{000000}</displayFormat>
        <label>Verzugszins Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verzugszinsen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>