force-app/main/default/objects/Verzugszins__c/fields/GueltigBis__c.field-meta.xml
<CustomField>
    <fullName>GueltigBis__c</fullName>
    <label>Gültig bis</label>
    <type>Date</type>
</CustomField>