force-app/main/default/objects/Verzugszins__c/fields/GueltigVon__c.field-meta.xml
<CustomField>
    <fullName>GueltigVon__c</fullName>
    <label>Gültig von</label>
    <type>Date</type>
</CustomField>