force-app/main/default/objects/Verzugszins__c/fields/Zinssatz__c.field-meta.xml
<CustomField>
    <fullName>Zinssatz__c</fullName>
    <label>Zinssatz</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>